--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,8 @@
     RewriteCond %{REQUEST_FILENAME} -f [OR]
     RewriteCond %{REQUEST_FILENAME} -d
 
-
     RewriteRule \.(?:css|js|jpe?g|gif|png)$ - [L]
+    RewriteRule ^api/(.*)$ routerApi.php?resource=$1 [QSA,L,END]
     RewriteRule ^(.*)$ router.php?action=$1 [QSA,L]
 
 </IfModule>
